Prevent image jumping in the crew page

--- a/src/components/Crew/Crew.css
+++ b/src/components/Crew/Crew.css
@@ -31,6 +31,13 @@
   color: hsl(var(--clr-white), 0.5);
 }
 
+@media (max-width: 35rem) {
+  .grid-container--crew > picture > img {
+    width: auto;
+    height: 260px;
+  }
+}
+
 @media (min-width: 35em) {
   .crew {
     background-image: url(./assets/background-crew-tablet.jpg);
